# thunderus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README  README.md  config.example.toml  config.toml  justfile
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  lib.rs
crates/cli/: Cargo.toml  config.example.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: approval.rs  classification.rs  config.rs  context.rs  debug.rs  drift.rs  error.rs  layout.rs  lib.rs  logging.rs  patch.rs  patch_queue_manager.rs  search.rs  session.rs  task_context.rs  teaching.rs  views.rs
crates/core/src/memory/: core.rs  document.rs  kinds.rs  lint.rs  manifest.rs  mod.rs  paths.rs  procedural.rs  retriever.rs  semantic.rs
crates/core/src/memory/gardener/: config.rs  consolidation.rs  drift.rs  entities.rs  extraction.rs  hygiene.rs  mod.rs  recap.rs
crates/core/src/provenance/: mod.rs  validator.rs
crates/core/src/session/: events.rs  metadata.rs  mod.rs
crates/core/src/trajectory/: mod.rs
crates/providers/: Cargo.toml
crates/providers/src/: adapter.rs  health.rs  lib.rs  mock.rs  prompts.rs  replay.rs  retry.rs  schemas.rs  types.rs
crates/skills/: Cargo.toml
crates/skills/src/: host_api.rs  lib.rs  loader.rs  parser.rs  types.rs
crates/skills/src/runtimes/: lua.rs  mod.rs  wasm.rs  wasm_host.rs
crates/store/: Cargo.toml
crates/store/src/: error.rs  indexer.rs  lib.rs  memory_store.rs  migration.rs  retriever.rs  schema.rs  schema.sql  vector.rs
crates/tools/: Cargo.toml
crates/tools/src/: apply_engine.rs  backup.rs  builtin.rs  classification.rs  dispatcher.rs  full_access.rs  hunk_labeler.rs  lib.rs  lua_tool.rs  patch_generator.rs  read_history.rs  registry.rs  result_formatting.rs  scope_extraction.rs  session_dispatcher.rs  skill_tool.rs  teaching_errors.rs  tool.rs  wasm_tool.rs
crates/tools/src/builtin/: echo.rs  edit.rs  glob.rs  grep.rs  mod.rs  multiedit.rs  noop.rs  patch.rs  read.rs  shell.rs  test_helpers.rs  write.rs
crates/ui/: Cargo.toml
crates/ui/src/: agent_handling.rs  app.rs  event_handler.rs  fuzzy_finder.rs  layout.rs  lib.rs  slash_commands.rs  snapshot_capture.rs  state.rs  syntax.rs  theme.rs  tui_approval.rs
crates/ui/src/agent_handling/: approvals.rs  drift.rs  events.rs  mod.rs  snapshot.rs  spawn.rs
crates/ui/src/app/: event_loop.rs  external_editor.rs  keybinds.rs  rendering.rs  session_replay.rs  shell.rs
crates/ui/src/components/: config_editor.rs  diff_view.rs  footer.rs  fuzzy_finder.rs  header.rs  inspector.rs  memory_hits.rs  mod.rs  sidebar.rs  teaching_hint.rs  transcript.rs  welcome.rs
crates/ui/src/event_handler/: approval.rs  config_editor.rs  fuzzy_finder.rs  key_action.rs  mod.rs  normal_mode.rs  slash_parser.rs
crates/ui/src/event_handler/normal/: inspector.rs  memory_hits.rs  mod.rs  welcome.rs
crates/ui/src/event_handler/normal/keys/: action_keys.rs  char_keys.rs  edit_keys.rs  mod.rs
crates/ui/src/slash/: garden.rs  memory.rs  mod.rs  parser.rs
crates/ui/src/state/: app_state.rs  approval.rs  composer.rs  config.rs  config_editor.rs  evidence.rs  exit.rs  header.rs  input.rs  memory_hits.rs  mod.rs  model_selector.rs  session.rs  sidebar.rs  ui.rs  welcome.rs
crates/ui/src/transcript/: entry.rs  mod.rs  renderer.rs  state.rs
crates/ui/src/transcript/entry/: builders.rs  display.rs  mod.rs  queries.rs  types.rs
crates/ui/src/transcript/renderer/: cards.rs  code.rs  context.rs  entry.rs  messages.rs  mod.rs  scrollbar.rs  wrap.rs
crates/ui/src/transcript/state/: entries.rs  focus.rs  mod.rs  scroll.rs
crates/ui/tests/: approval_integration_test.rs  inspector_snapshots.rs
doc/: ADAPTERS.txt  DESIGN.txt  PROVIDERS.txt  QA.txt  REFS.txt  ROADMAP.txt  SCHEMAS.txt  VISION.txt  adapters.txt  art.txt  design.txt
docs/: getting-started.md  index.md  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/concepts/: architecture.md  index.md  system.md  trajectories.md
docs/contributing/: index.md
docs/development/: architecture.md  data-flow.md  development.md  index.md  patterns.md
docs/extensibility/: index.md
docs/guide/: index.md  philosophy.md  tui.md  workflows.md
docs/reference/: cli.md  configuration.md  index.md  keybindings.md
