[workspace]
resolver = "2"
members = [
    "crates/agent",
    "crates/cli",
    "crates/core",
    "crates/providers",
    "crates/skills",
    "crates/store",
    "crates/tools",
    "crates/ui",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tracing = "0.1"
tempfile = "3.16"
tokio-test = "0.4"

[workspace.lints.clippy]
bool_comparison = "deny"
duplicate_mod = "deny"
inconsistent_struct_constructor = "deny"
invalid_regex = "deny"
mem_forget = "deny"
mixed_case_hex_literals = "deny"
suspicious_arithmetic_impl = "deny"
uninit_assumed_init = "deny"
suspicious_else_formatting = "deny"
suspicious_op_assign_impl = "deny"
suspicious_to_owned = "deny"
cmp_owned = "deny"
cmp_null = "deny"
manual_map = "deny"
too_many_arguments = "warn"
cognitive_complexity = "warn"
large_enum_variant = "warn"
needless_borrow = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
unnecessary_cast = "warn"
inefficient_to_string = "warn"
or_fun_call = "warn"
unnecessary_to_owned = "warn"
map_clone = "warn"
flat_map_identity = "warn"
needless_collect = "warn"
vec_init_then_push = "warn"
len_zero = "allow"
range_plus_one = "allow"
manual_range_contains = "allow"
