[package]
name = "thunderus-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thunderus-core = { path = "../core" }
thunderus-providers = { path = "../providers" }

[dev-dependencies]
tokio-test = "0.4"
