[package]
name = "thunderus-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = "0.1"
futures = "0.3"

thunderus-core = { path = "../core" }
thunderus-providers = { path = "../providers" }
thunderus-store = { path = "../store" }
thunderus-tools = { path = "../tools" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
