[package]
name = "thunderus-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "thunderus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.54"
libc = "0.2"
owo-colors = "4.2.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

thunderus-core = { path = "../core" }
thunderus-store = { path = "../store" }
thunderus-ui = { path = "../ui" }
thunderus-tools = { path = "../tools" }
thunderus-providers = { path = "../providers" }

[dev-dependencies]
tempfile = "3.16"
