[package]
name = "thunderus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
serde_yml = "0.0.12"
git2 = "0.20.3"
regex = "1"

[dev-dependencies]
tempfile = "3.16"
tokio-test = "0.4"
