[package]
name = "thunderus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }

async-trait = "0.1"
thiserror = "2.0"
serde_yml = "0.0.12"
git2 = "0.20.3"
regex = "1"
notify = "8.0.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
