[package]
name = "thunderus-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.85"
bytes = "1.9.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.9"
thunderus-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
