[package]
name = "thunderus-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

async-stream = "0.3.6"
async-trait = "0.1.85"
bytes = "1.9.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "rustls",
] }
thiserror = "2.0.9"
tokio-stream = "0.1.17"

thunderus-core = { path = "../core" }
