[package]
name = "thunderus-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
thunderus-core = { path = "../core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# YAML frontmatter parsing
serde_yml = "0.0.12"

# File system operations
walkdir = "2.5"
glob = "0.3"
dirs = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.16"
