[package]
name = "thunderus-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
thunderus-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

serde_yml = "0.0.12"
walkdir = "2.5"
glob = "0.3"
dirs = "6"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.11"

[dev-dependencies]
tempfile = { workspace = true }
