[package]
name = "thunderus-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
thunderus-core = { path = "../core" }

tracing = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

serde_yml = "0.0.12"
walkdir = "2.5"
glob = "0.3"
dirs = "6"
thiserror = "2.0"
anyhow = "1.0"
regex = "1.11"

# Optional WASM runtime support (Extism)
extism = { version = "1.7", optional = true }

# Optional Lua runtime support (mlua)
mlua = { version = "0.10", features = [
    "luau",
    "serialize",
    "send",
], optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
wasm = ["dep:extism"]
lua = ["dep:mlua"]
full = ["wasm", "lua"]
