[package]
name = "thunderus-store"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-rusqlite = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"

thunderus-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.16"
tokio-test = "0.4"
