[package]
name = "thunderus-store"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }
tokio-rusqlite = "0.7"
serde_yml = "0.0.12"
thiserror = "2"

thunderus-core = { path = "../core" }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
