[package]
name = "thunderus-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.128"
thiserror = "2"
glob = "0.3"
ignore = "0.4"
regex-lite = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4"
imara-diff = { version = "0.2", features = ["unified_diff"] }

thunderus-core = { path = "../core" }
thunderus-providers = { path = "../providers" }
thunderus-skills = { path = "../skills" }

[dev-dependencies]
tempfile = "3.16"
