[package]
name = "thunderus-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

thiserror = "2"
glob = "0.3"
ignore = "0.4"
regex-lite = "0.1"
imara-diff = { version = "0.2", features = ["unified_diff"] }

thunderus-core = { path = "../core" }
thunderus-providers = { path = "../providers" }
thunderus-skills = { path = "../skills" }

[dev-dependencies]
tempfile = { workspace = true }
