[package]
name = "thunderus-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
syntect = { version = "5.2", features = ["default-fancy"] }
owo-colors = "4.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
nucleo-matcher = "0.3"
ignore = "0.4"
num_cpus = "1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
futures = "0.3"
dirs = "6"
textwrap = "0.16"

thunderus-core = { path = "../core" }
thunderus-tools = { path = "../tools" }
thunderus-agent = { path = "../agent" }
thunderus-providers = { path = "../providers" }
thunderus-store = { path = "../store" }
tokio-util = "0.7.18"

[dev-dependencies]
tempfile = "3"
