[package]
name = "thunderus-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }

ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
syntect = { version = "5.2", features = ["default-fancy"] }
owo-colors = "4"
uuid = { version = "1.0", features = ["v4"] }
nucleo-matcher = "0.3"
ignore = "0.4"
num_cpus = "1"
futures = "0.3"
dirs = "6"
textwrap = "0.16"

thunderus-core = { path = "../core" }
thunderus-tools = { path = "../tools" }
thunderus-agent = { path = "../agent" }
thunderus-providers = { path = "../providers" }
thunderus-store = { path = "../store" }

[dev-dependencies]
tempfile = { workspace = true }
